added swagger annotations to the clinic routes
